--- a/main/BSGameCenter.apk/res/values-hr/strings.xml
+++ b/main/BSGameCenter.apk/res/values-hr/strings.xml
@@ -96,13 +96,13 @@
   <string name="library_talkback_launch">Pritisnite A za reprodukciju</string>
   <string name="library_talkback_resume">Pritisnite A za nastavak</string>
   <string name="library_talkback_uninstalled">Deinstalirano</string>
-  <string name="library_update_cancel">Otkaži</string>
+  <string name="library_update_cancel">Odustani</string>
   <string name="library_update_confirm">Ažuriraj</string>
   <string name="library_update_content">"Što je novo: %s"</string>
   <string name="library_update_forced">Igra nije kompatibilna. Prvo ažurirajte.</string>
   <string name="library_update_title">Ažuriranje je dostupno</string>
-  <string name="loading">Samo sekundu…</string>
-  <string name="login_cancel">Otkaži</string>
+  <string name="loading">Samo trenutak…</string>
+  <string name="login_cancel">Odustani</string>
   <string name="login_confirm">Prijavite se kao %s</string>
   <string name="login_error_notice_content">Pritisnite A da biste pokušali ponovno i nastavili na prednjem zaslonu</string>
   <string name="login_error_notice_title">"Prijava nije uspjela"</string>
@@ -117,7 +117,7 @@
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
-  <string name="miuix_appcompat_accessibility_collapse_state">Sažet</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažeto</string>
   <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
   <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izađi iz načina uređivanja</string>
   <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
