--- a/main/MiuiAod.apk/res/values-hr/strings.xml
+++ b/main/MiuiAod.apk/res/values-hr/strings.xml
@@ -322,7 +322,7 @@ dd.MM."</string>
   <string name="kg_function_button_text_home_pick">Odaberi</string>
   <string name="kg_function_font_filter_type_title">Efekt</string>
   <string name="kg_function_text_component_contents">Prikazane stavke</string>
-  <string name="kg_function_wallpaper_pinch_to_zoom">Uštipnite za zumiranje</string>
+  <string name="kg_function_wallpaper_pinch_to_zoom">Zumiranje i pomicanje s dva prsta</string>
   <string name="kg_gallery_label">Uredi prezentaciju</string>
   <string name="kg_giving_up_editing">Odbaci</string>
   <string name="kg_giving_up_editing_collocations">Želiš li sada odbaciti promjene?</string>
