--- a/Croatian/main/MiuiCompass.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiuiCompass.apk/res/values-hr/strings.xml
@@ -113,6 +113,7 @@
   <string name="location_west">Z</string>
   <string name="longitude">DUŽ</string>
   <string name="miuix_access_state_desc">Odabrano</string>
+  <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indexa</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
