--- a/Croatian/main/TeleService.apk/res/values-hr/strings.xml
+++ b/Croatian/main/TeleService.apk/res/values-hr/strings.xml
@@ -1969,6 +1969,7 @@ Uvijek koristi ovaj broj"</string>
   <string name="miui_notification_network_selection_title">SIM: nema usluge</string>
   <string name="miui_notification_network_selection_title_by_sim">SIM %s: nema usluge</string>
   <string name="miuix_access_state_desc">Odabrano</string>
+  <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
   <string name="miuix_appcompat_accessibility_collapse_state">Sažet</string>
   <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
