--- a/Croatian/main/CloudBackup.apk/res/values-hr/strings.xml
+++ b/Croatian/main/CloudBackup.apk/res/values-hr/strings.xml
@@ -311,6 +311,7 @@ Molimo pošaljite ovaj kod tehničaru."</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
   <string name="miuix_appcompat_actionbar_immersion_button_more_description">Više</string>
+  <string name="miuix_appcompat_action_sheet_default_message">Odaberi</string>
   <string name="miuix_appcompat_cancel_description">Odustani</string>
   <string name="miuix_appcompat_confirm_description">Potvrdi</string>
   <string name="miuix_appcompat_delete_description">Izbriši</string>
